feat: add building process
