# code/infrastructure/src/main/java/com/sandbox/proyecto/adapter/out/repository/postgre/entity/office/OfficeEntity.java
@@ -17,6 +17,6 @@ public class OfficeEntity {
 
   private String name;
 
-  private String address;
+  private UUID buildingId;
 
 }
